compiler/tests/fixtures/invalid/semantics/action_selector_targets_undefined_selector.viv
// Invalid: action selector targets undefined action selector

action wave:
    roles:
        @waver:
            as: initiator

action-selector pick:
    roles:
        @actor:
            as: initiator
    target randomly:
        selector nonexistent;
